# mma

./: CMakeLists.txt  README.md  gpuVector.cpp  gpuVector.cuh  lib.cuh  matlab_utils.cpp  matlab_utils.h  mmaOpt.cpp  mmaOpt.cu  mmaOpt.h  test_suits.cpp
